# cbtf-argonavis

./: .gitignore  .support_for_install.sh  CMakeLists.txt  DataTable.cpp  OpenSpeedShop.patch  README  install-cbtf  run_cmake_argo.sh  run_cmake_argo_debug.sh
CUDA/: CMakeLists.txt  FindCUPTI.cmake  FindPAPI.cmake  cuda.xml.in  cudadump.xml.in  cudaio.xml.in
CUDA/cmake/: FindCBTF-Krell.cmake  FindMRNet.cmake  FindPAPI.cmake
CUDA/collector/: CMakeLists.txt  CUDA_check.h  CUPTI_activities.c  CUPTI_activities.h  CUPTI_callbacks.c  CUPTI_callbacks.h  CUPTI_check.h  CUPTI_context.c  CUPTI_context.h  CUPTI_events.c  CUPTI_events.h  CUPTI_metrics.c  CUPTI_metrics.h  CUPTI_stream.c  CUPTI_stream.h  CUPTI_time.c  CUPTI_time.h  Mutex.c  Mutex.h  PAPI.c  PAPI.h  Pthread_check.h  TLS.c  TLS.h  collector.c  collector.h  cuda_context.c  cuda_context.h  cuda_stream.c  cuda_stream.h
CUDA/components/: AddressAggregatorForCUDA.cpp  CMakeLists.txt  CUDADebug.cpp  CUDAToIO.cpp  DataAggregatorForCUDA.cpp  SimpleThreadName.hpp  StateManagementForCUDA.cpp  XDR.cpp
CUDA/cupti_avail/: CMakeLists.txt  cupti_avail.cpp
CUDA/libargonavis-cuda/: BlobGenerator.cpp  BlobGenerator.hpp  CMakeLists.txt  DataTable.cpp  DataTable.hpp  EventClass.hpp  EventInstance.hpp  EventTable.hpp  PartialEventTable.hpp  PerformanceData.cpp  stringify.cpp
CUDA/libargonavis-cuda/ArgoNavis/CUDA/: AddressVisitor.hpp  BlobVisitor.hpp  CachePreference.hpp  CopyKind.hpp  CounterDescription.hpp  CounterKind.hpp  DataTransfer.hpp  DataTransferVisitor.hpp  Device.hpp  KernelExecution.hpp  KernelExecutionVisitor.hpp  MemoryKind.hpp  PerformanceData.hpp  PeriodicSampleVisitor.hpp  StackTrace.hpp  Stringify.hpp  Vector.hpp  stringify.hpp
CUDA/messages/: CMakeLists.txt  CUDA_data.x
CUDA/playback/: CMakeLists.txt  collector.c
CUDA/replay/: collector.c
CUDA/symtab/: AddressBitmap.cpp  AddressBitmap.hpp  CMakeLists.txt  Extent.hpp  FunctionImpl.hpp  LinkedObject.cpp  LinkedObjectImpl.cpp  LinkedObjectImpl.hpp  StatementImpl.hpp
CUDA/symtab/KrellInstitute/SymbolTable/: Address.hpp  AddressRange.hpp  Function.hpp  Interval.hpp  LinkedObject.hpp  Statement.hpp  Time.hpp  TimeInterval.hpp
Clustering/: CMakeLists.txt  clustering.xml.in
Clustering/components/: Algorithms.cpp  Algorithms.hpp  BLAS.cpp  BLAS.hpp  CMakeLists.txt  ClusteringFilter.cpp  ClusteringLeaf.cpp  ClusteringManager.cpp  CompareFeatureNames.hpp  FeatureGenerator.cpp  Messages.x  State.cpp  State.hpp  ThreadTable.cpp  ThreadTable.hpp  ThreadUID.hpp  ThreadUIDGroup.hpp  XDR.cpp
Clustering/components/ArgoNavis/Clustering/: Feature.hpp  FeatureGenerator.hpp  FeatureName.hpp  FeatureVector.hpp
Clustering/messages/: CMakeLists.txt  Clustering.x
cmake/: CheckPlatform.cmake  FindCBTF-Krell.cmake  FindCUDA.cmake  FindCUPTI.cmake  FindDyninst.cmake  FindLibMonitor.cmake  FindPAPI.cmake
libargonavis-base/: AddressBitmap.cpp  AddressRangeIndex.hpp  AddressSet.cpp  AddressSpaces.cpp  CMakeLists.txt  DyninstResolver.cpp  EntityTable.hpp  EntityUID.hpp  FileName.cpp  FindArgoNavis-Base.cmake  Function.cpp  LinkedObject.cpp  Loop.cpp  OverflowSamples.cpp  PeriodicSamples.cpp  PeriodicSamplesGroup.cpp  Resolver.cpp  Statement.cpp  SymbolTable.cpp  SymbolTable.hpp  ThreadName.cpp  test.cpp
libargonavis-base/ArgoNavis/Base/: Address.hpp  AddressBitmap.hpp  AddressRange.hpp  AddressRangeVisitor.hpp  AddressSet.hpp  AddressSpaces.hpp  AddressVisitor.hpp  BlobVisitor.hpp  DyninstResolver.hpp  FileName.hpp  Function.hpp  FunctionVisitor.hpp  Interval.hpp  LinkedObject.hpp  LinkedObjectVisitor.hpp  Loop.hpp  LoopVisitor.hpp  MappingVisitor.hpp  OverflowSampleVisitor.hpp  OverflowSamples.hpp  PeriodicSampleVisitor.hpp  PeriodicSamples.hpp  PeriodicSamplesGroup.hpp  Raise.hpp  Resolver.hpp  StackTrace.hpp  Statement.hpp  StatementVisitor.hpp  ThreadName.hpp  ThreadVisitor.hpp  Time.hpp  TimeInterval.hpp  XDR.hpp
libargonavis-symtab/: AddressRangeIndex.hpp  AddressSpaces.cpp  CMakeLists.txt  EntityTable.hpp  EntityUID.hpp  Function.cpp  LinkedObject.cpp  Loop.cpp  Statement.cpp  SymbolTable.cpp  SymbolTable.hpp  test.cpp
libargonavis-symtab/ArgoNavis/SymbolTable/: AddressSpaces.hpp  Function.hpp  FunctionVisitor.hpp  LinkedObject.hpp  LinkedObjectVisitor.hpp  Loop.hpp  LoopVisitor.hpp  MappingVisitor.hpp  Statement.hpp  StatementVisitor.hpp  ThreadVisitor.hpp
